--- a/src/templates/captcha_check.html
+++ b/src/templates/captcha_check.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CAPTCHA Verification</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <script>
         function refreshCaptcha() {
             let captchaImg = document.getElementById("captcha-img");
@@ -30,7 +32,9 @@
     </script>
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: white;
+            font-family: 'Arial', sans-serif;
+            font-size: 1.1rem;
         }
 
         .error-alert {
@@ -38,11 +42,24 @@
             margin-bottom: 15px;
         }
 
+        .card {
+            border: none !important;
+            box-shadow: none !important;
+        }
+
+        /* Custom color for header */
         .custom-header {
-            background-color: rgb(0, 80, 180); /* Dark blue background */
-            color: white; /* White text */
+            background-color: white; /* Dark blue background */
+            color: rgb(5, 40, 80); /* White text */
             padding: 15px 20px; /* Added padding for spacing */
-            text-align: center; /* Center the header text */
+            text-align: left;
+            border-bottom: none !important; /* Center the header text */
+            font-weight: bold;
+        }
+
+        .custom-header h3 {
+            margin-bottom: 0px; /* Reduces vertical space under text */
+            font-weight: bold;
         }
 
         /* Custom color for button */
@@ -52,7 +69,7 @@
             color: white; /* White text on the button */
             padding: 12px 20px; /* Add padding to the button */
             font-size: 16px; /* Font size for button text */
-            width: 50%; /* Make the button span the full width */
+            width: 30%; /* Make the button span the full width */
         }
 
         .custom-btn:hover {
@@ -72,14 +89,17 @@
     <div class="container mt-5 d-flex justify-content-center">
         <div class="captcha-container">
             <div class="card shadow">
+
+                <!--
                 <div class="card-header custom-header">
                     <h3>CAPTCHA Verification</h3>
-                </div>
+                </div>-->
+
                 <div class="card-body">
                     <!-- Error Message Alert 
                     <div id="error-message" class="alert alert-danger error-alert" role="alert"></div> -->
 
-                    <p class="text-muted text-center">
+                    <p>
                         Please complete the CAPTCHA verification to proceed.
                     </p>
 
