Added route for already completed survey

--- a/src/templates/thank_you.html
+++ b/src/templates/thank_you.html
@@ -41,7 +41,8 @@
                     </div>
                     <div class="card-body">
                         <p class="fs-5">Thank you for completing the survey!</p>
-                        <p>Please copy or download your code below and submit it on MTurk to receive your payment.</p>
+                        <p>Please copy or download your code below and submit it on Prolific to receive your payment.
+                        </p>
 
                         <div class="alert alert-primary text-center">
                             <strong>Prolific ID:</strong> {{ prolific_id }}<br>
