--- a/src/templates/consent.html
+++ b/src/templates/consent.html
@@ -55,6 +55,10 @@
             justify-content: right; /* Align the button to the center horizontally */
             margin-top: 20px; /* Add space above the button */
         }
+        .custom-link {
+            color: rgb(0, 80, 180);
+            text-decoration: none; /* optional: removes underline */
+        }
     </style>
 
 </head>
@@ -67,7 +71,7 @@
                 <div class="card">
 
                     <div class="custom-header">
-                        <h3>Survey Consent</h3>
+                        <h3>Consent to participate</h3>
                     </div>
 
                     <div class="card-body">
@@ -84,7 +88,56 @@
                             <p class="mt-3">We are conducting this survey as part of an academic study and need your consent to confirm that you are a unique participant. 
                                 This helps ensure the accuracy and reliability of the collected data. Your responses will remain anonymous and 
                                 confidential, and will be used only for this study.</p>
+                            
+                            <h5 class="mt-3 mb-3"><strong>Who is responsible for the study?</strong></h5>
+                            <p>Prof. Dr. Markus Ludwig</p>
+                            <p>Institute of Economics (VWL-Institut)<br>
+                            Technische Universität Braunschweig<br>
+                            Spielmannstraße 9, 38106 Braunschweig, Germany</p>
 
+                            
+
+                            <h5 class="mt-3 mb-3"><strong>What are the purposes of the study?</strong></h5>
+                            <p>In this study, we explore the formation of individual perspectives.</p>
+
+
+                            <h5 class="mt-3 mb-3"><strong>Privacy policy</strong></h5>
+                            <p>This privacy policy outlines how we collect, use, and protect your data in accordance with GDPR. Our primary goal 
+                                is to ensure your personal information remains protected and used transparently.</p>
+                            
+                            <h5>Data collection</h5>
+                            <p>We collect minimal data necessary for your participation in our survey, using an anonymized unique identifier 
+                                generated from your IP address and user agent information. This data is not stored but temporarily used to 
+                                ensure one-time participation.</p>
+
+                            <h5>Data use and retention</h5>
+                            <p>Data collected is solely for the analysis within this study. Per GDPR regulations, the collected data will 
+                                not be retained beyond its immediate purpose. Unique identifiers are masked and non-identifiable.</p>
+
+                            <h5>Your rights</h5>
+                            <ul>
+                            <li>You have the right to access your data and to request its deletion.</li>
+                            <li>You can object to data processing practices that concern you.</li>
+                            <!-- <li>For any concerns, contact us at  [vwl@tu-braunschweig.de].</li> -->
+                            <li>For any concerns, contact us at <a
+                                    href="mailto:vwl@tu-braunschweig.de" class="custom-link">vwl@tu-braunschweig.de</a>.</li>
+
+                            </ul>
+
+                            <h5>Data protection</h5>
+                           <p>Your data is protected using industry-standard methods. We do not share your personal data
+                            with third parties.</p>
+
+                           <h5>Changes to this policy</h5>
+                           <p>We may update this policy and will notify you of any significant changes.</p>
+
+                            <!-- <p>For detailed information, please visit [Official GDPR Guidelines](https://gdpr-info.eu/).</p> -->
+                            <p>For detailed information, please visit <a href="https://gdpr-info.eu/"
+                                target="_blank" class="custom-link">Official GDPR Guidelines</a>.</p>
+                            
+                            
+
+                            <h5 class="mt-3 mb-3"><strong>Declaration of consent</strong></h5>
                             <p>Please review the consent options below and select your choice. Participation is voluntary, and by 
                                 consenting, you agree to the use of your responses as described. We appreciate your understanding and 
                                 cooperation.</p>
@@ -120,9 +173,9 @@
                         <p class="mt-3 text-muted">By giving your consent, you agree to allow us to process your
                             information as described. We appreciate your understanding and cooperation.</p> -->
                     </div>
-                    <div class="mt-3">
+                    <!-- <div class="mt-3">
                         <a href="{{ url_for('main.privacy') }}" class="btn btn-secondary">Read Privacy Policy</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
