--- a/src/templates/captcha_check.html
+++ b/src/templates/captcha_check.html
@@ -113,7 +113,7 @@
                     <!-- Error Message Alert 
                     <div id="error-message" class="alert alert-danger error-alert" role="alert"></div> -->
 
-                    <p>
+                    <p class="text-center">
                         Please complete the CAPTCHA verification to proceed.
                     </p>
 
