--- a/src/templates/investment_multi.html
+++ b/src/templates/investment_multi.html
@@ -21,7 +21,7 @@
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 1000px;
             border: none !important;
             box-shadow: none !important;
         }
@@ -180,7 +180,7 @@
 <body>
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <!-- <div class="col-md-8"> -->
 
                 <div class="card">
 
