--- a/src/templates/news_info.html
+++ b/src/templates/news_info.html
@@ -19,8 +19,14 @@
             box-shadow: none !important;
         }
 
+        .container {
+            max-width: 1000px;
+            border: none !important;
+            box-shadow: none !important;
+        }
+
         .news-container {
-            max-width: 800px;
+            max-width: 1000px;
             margin: auto;
             background: white;
             padding: 25px;
