--- a/src/templates/attentioncheck_1.html
+++ b/src/templates/attentioncheck_1.html
@@ -20,6 +20,12 @@
             box-shadow: none !important;
         }
 
+        .container {
+            max-width: 1000px;
+            border: none !important;
+            box-shadow: none !important;
+        }
+
         .btn-primary {
             background-color: #007bff;
             border-color: #007bff;
@@ -122,7 +128,7 @@
 <body>
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <!-- <div class="col-md-8"> -->
                 <div class="card">
 
                     <div class="custom-header">
@@ -132,7 +138,7 @@
                     <div class="card-body">
                         
 
-                        <p class="mt-3 mb-3">This study is intended for computer users, i.e., desktop or laptop. If you are
+                        <p class="mt-3 mb-3">This survey is designed for computer users, i.e., desktop or laptop. If you are
                             accessing this survey from a smartphone, a tablet or a non-PC device, we recommend that you
                             switch to a desktop or laptop and enter the study again.</p>
                         
