--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,6 +20,12 @@
             box-shadow: none !important;
         }
 
+        .container {
+            max-width: 1000px;
+            border: none !important;
+            box-shadow: none !important;
+        }
+
         .btn-primary {
             background-color: #007bff;
             border-color: #007bff;
@@ -92,7 +98,7 @@
 <body>
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <!-- <div class="col-md-8"> -->
 
                 <div class="card">
 
