--- a/src/templates/investment_approach.html
+++ b/src/templates/investment_approach.html
@@ -20,6 +20,12 @@
             box-shadow: none !important;
         }
 
+        .container {
+            max-width: 1000px;
+            border: none !important;
+            box-shadow: none !important;
+        }
+
         .btn-primary {
             background-color: #007bff;
             border-color: #007bff;
@@ -122,7 +128,7 @@
 <body>
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <!-- <div class="col-md-8"> -->
 
                 <div class="card">
                     <!--
@@ -132,10 +138,10 @@
 
                     <div class="card-body">
 
-                        <p class="mt-3 mb-4"><strong> Please briefly explain in the box below 
+                        <p class="mt-3 "><strong> Please briefly explain in the box below 
                             the approach you used when allocating your investment funds among the start-ups in the portfolio.</strong> </p>
 
-                        <!-- <p class="mt-3 text-muted fst-italic">Please write your answer in complete and clear sentences.</p> -->
+                        <p class="mt-5 text-muted fst-italic">Please write <strong>least 15 words</strong> using coherent sentences to express your thoughts.</p>
                         {% if error %}
                         <div class="text-danger mb-4 text-center fw-bold">
                             {{ error }}
