--- a/src/templates/investment_reflect_likert.html
+++ b/src/templates/investment_reflect_likert.html
@@ -21,7 +21,7 @@
 
         .likert-group .form-check {
             min-width: 150px;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
         }
 
         .likert-group {
@@ -29,8 +29,8 @@
         }
 
         label.fw-bold {
-            margin-top: 1.5rem;
-            margin-bottom: 1rem; /* Increase bottom spacing */
+            margin-top: 1.8rem;
+            margin-bottom: 1.5rem; /* Increase bottom spacing */
             display: block; /* Ensures margin takes full line */
         }
 
@@ -105,8 +105,10 @@
                     </div>-->
 
                     <div class="card-body">
-                        <p class="mt-3 mb-5"><strong>To what extent do you believe each of the following start-up and founder 
+                        <p class="mt-3"><strong>To what extent do you believe each of the following start-up and founder 
                             characteristics contributes to a start-up’s success?</strong></p>
+
+                        <p class="mt-5 mb-5 text-muted fst-italic">Please consider each characteristic and response option carefully before selecting the one that best reflects your opinion.</p>
 
                         <form method="POST" action="{{ url_for('survey_bp.investment_reflect_likert') }}">
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
