--- a/src/templates/phase_control.html
+++ b/src/templates/phase_control.html
@@ -107,6 +107,12 @@
             box-shadow: none !important;
         }
 
+        .container {
+            max-width: 1000px;
+            border: none !important;
+            box-shadow: none !important;
+        }
+
         .btn-primary {
             background-color: #007bff;
             border-color: #007bff;
@@ -177,12 +183,12 @@
 <body>
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <!-- <div class="col-md-8"> -->
 
                 <div class="card">
 
                     <div class="custom-header">
-                        <h3>Investing in a Start-up</h3> 
+                        <h3>Investing in a start-up</h3> 
                     </div>
 
                     <div class="card-body">
